--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,7 +6,7 @@ jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps: 
-      - name: echo a string
+      - name: eccho a string
         run: echo "Hello World"
       - name: multiline script 
         run: |
