--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,5 +1,7 @@
 name: ENV variables
-on: push
+
+on:
+  push
 
 env:
   WF_ENV: Available to all jobs
@@ -27,17 +29,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Default ENV variables
-          run: |
-            echo "HOME: ${HOME}"
-            echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
-            echo "GITHUB_ACTION: ${GITHUB_ACTION}"
-            echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
-            echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
-            echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
-            echo "GITHUB_EVENT_NAME: ${GITHUB_EVENT_NAME}"
-            echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
-            echo "GITHUB_SHA: ${GITHUB_SHA}"
-            echo "GITHUB_REF: ${GITHUB_REF}"
-            echo "WF_ENV: ${WF_ENV}"
-            echo "JOB_ENV: ${JOB_ENV}"
-            echo "STEP_ENV: ${STEP_ENV}"
+        run: |
+          echo "HOME: ${HOME}"
+          echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
+          echo "GITHUB_ACTION: ${GITHUB_ACTION}"
+          echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
+          echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
+          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
+          echo "GITHUB_EVENT_NAME: ${GITHUB_EVENT_NAME}"
+          echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
+          echo "GITHUB_SHA: ${GITHUB_SHA}"
+          echo "GITHUB_REF: ${GITHUB_REF}"
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
+          
