--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,6 +5,7 @@ on:
 
 env:
   WF_ENV: Available to all jobs
+  WF_ENV_SECRET: ${{ secrets.WF_ENV_SECRET }}
 
 jobs:
   log-env:
@@ -43,4 +44,5 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+          echo "WF_ENV_SECRETS": ${WF_ENV_SECRET}"
           
