--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -44,5 +44,4 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
-          echo "WF_ENV_SECRETS": ${WF_ENV_SECRET}"
-          
+          echo "WF_ENV_SECRETS: ${WF_ENV_SECRET}"
