--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -48,7 +48,17 @@ jobs:
   create_issue:
     runs-on: ubuntu-latest
     permissions:
+      actions: write
+      checks: write
+      contents: write
+      deployments: write
       issues: write
+      packages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
+
     steps:
       - name: Push a random number into a file
         run: |
