added secret that is encrypted with gpg

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,6 +8,17 @@ env:
   WF_ENV_SECRET: ${{ secrets.WF_ENV_SECRET }}
 
 jobs:
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Decrypt file
+        env:
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+        run: gpq --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpq
+      - name: Print our file content
+        run: cat $HOME/secret.json
+
   log-env:
     runs-on: ubuntu-latest
     env:
@@ -45,6 +56,7 @@ jobs:
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
           echo "WF_ENV_SECRETS: ${WF_ENV_SECRET}"
+
   create_issue:
     runs-on: ubuntu-latest
     permissions:
@@ -58,7 +70,6 @@ jobs:
       repository-projects: write
       security-events: write
       statuses: write
-
     steps:
       - name: Push a random number into a file
         run: |
