--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -11,6 +11,7 @@ jobs:
   decrypt:
     runs-on: ubuntu-latest
     steps:
+      # added decrypt file
       - uses: actions/checkout@v1
       - name: Decrypt file
         env:
