--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Decrypt file
         env:
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
-        run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpq
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
       - name: Print our file content
         run: cat $HOME/secret.json
 
