added function job

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,6 +8,16 @@ env:
   WF_ENV_SECRET: ${{ secrets.WF_ENV_SECRET }}
 
 jobs:
+  functions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: dump
+        run: |
+          echo ${{ contains( "hello", "ll" ) }}
+          echo ${{ startsWith( "hello", "he" ) }}
+          echo ${{ endsWith( "hello", "ll" ) }}
+          echo ${{ format( "Hello {0} {1} {2}, "World", "!", "?" ) }}
+
   context:
     name: Print out context information
     runs-on: ubuntu-latest
