--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: dump
         run: |
-          echo ${{ contains( "hello", "ll" ) }}
+          echo ${{ contains( 'hello', 'll' ) }}
           echo ${{ startsWith( "hello", "he" ) }}
           echo ${{ endsWith( "hello", "ll" ) }}
           echo ${{ format( "Hello {0} {1} {2}, "World", "!", "?" ) }}
