--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -14,9 +14,9 @@ jobs:
       - name: dump
         run: |
           echo ${{ contains( 'hello', 'll' ) }}
-          echo ${{ startsWith( "hello", "he" ) }}
-          echo ${{ endsWith( "hello", "ll" ) }}
-          echo ${{ format( "Hello {0} {1} {2}, "World", "!", "?" ) }}
+          echo ${{ startsWith( 'hello', 'he' ) }}
+          echo ${{ endsWith( 'hello', 'll' ) }}
+          echo ${{ format( 'Hello {0} {1} {2}', "World", "!", "?" ) }}
 
   context:
     name: Print out context information
