--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -16,7 +16,7 @@ jobs:
           echo ${{ contains( 'hello', 'll' ) }}
           echo ${{ startsWith( 'hello', 'he' ) }}
           echo ${{ endsWith( 'hello', 'll' ) }}
-          echo ${{ format( 'Hello {0} {1} {2}', "World", "!", "?" ) }}
+          echo ${{ format( 'Hello {0} {1} {2}', 'World', '!', '?' ) }}
 
   context:
     name: Print out context information
