added if conditions for job status

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,7 +1,6 @@
 name: ENV variables
 
-on:
-  push
+on:  [push, pull_request]
 
 env:
   WF_ENV: Available to all jobs
@@ -11,7 +10,7 @@ jobs:
   functions:
     runs-on: ubuntu-latest
     steps:
-      - name: dump
+      - name: functions and results
         run: |
           echo ${{ contains( 'hello', 'll' ) }}
           echo ${{ startsWith( 'hello', 'he' ) }}
@@ -19,14 +18,15 @@ jobs:
           echo ${{ format( 'Hello {0} {1} {2}', 'World', '!', '?' ) }}
 
   context:
-    name: Print out context information
     runs-on: ubuntu-latest
+    if: github.event_name == "push"
     steps:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJSON(github) }}
         run: echo "$GITHUB_CONTEXT"
       - name: Dump job context
+        if: failure()
         env:
           JOB_CONTEXT: ${{ toJSON(job) }}
         run: echo "$JOB_CONTEXT"
@@ -35,6 +35,7 @@ jobs:
           STEPS_CONTEXT: ${{ toJSON(steps) }}
         run: echo "$STEPS_CONTEXT"
       - name: Dump runner context
+        if: always()
         env:
           RUNNER_CONTEXT: ${{ toJSON(runner) }}
         run: echo "$RUNNER_CONTEXT"
