--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -19,7 +19,7 @@ jobs:
 
   context:
     runs-on: ubuntu-latest
-    if: github.event_name == "push"
+    if: github.event_name == 'push'
     steps:
       - name: Dump GitHub context
         env:
