--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,15 +4,15 @@ on:
 #  schedule:
 #   - cron: "0/5 * * * *"
 #   - cron: "0/6 * * * *"
-  push:
-    branches:
-      - master
-      - "feature/**" #matches anything that starts with feature
-      - "!feature/featC"# will ignore featC
-    paths-ignore:
-      - "**.md"
-  repository_dispatch:
-    types: [build]
+#  push:
+#    branches:
+#      - master
+#      - "feature/**" #matches anything that starts with feature
+#      - "!feature/featC"# will ignore featC
+#    paths-ignore:
+#      - "**.md"
+#  repository_dispatch:
+#    types: [build]
   pull_request:
     types: [closed, assigned, opened, reopened]
 
